@@ -40,12 +40,12 @@ RPM_LDADD = \
 	$(RPMIO_LDADD)
 
 macros =	$(abs_top_builddir)/macros/macros:$(testdir)/macros
-#XXX rpmpopt =	$(abs_top_builddir)/rpmpopt
+rpmpopt =	$(abs_top_builddir)/rpmpopt
 
-rpm =		$(abs_top_builddir)/rpm --macros $(macros)
-rpmbuild =	$(abs_top_builddir)/rpmbuild  --macros $(macros)
+rpm =		$(abs_top_builddir)/rpm --rpmpopt=$(rpmpopt) --macros $(macros)
+rpmbuild =	$(abs_top_builddir)/rpmbuild --rpmpopt=$(rpmpopt) --macros $(macros)
 rpm2cpio =	$(abs_top_builddir)/tools/rpm2cpio
-rpmcache =	$(abs_top_builddir)/tools/rpmcache --macros $(macros)
+rpmcache =	$(abs_top_builddir)/tools/rpmcache --rpmpopt=$(rpmpopt) --macros $(macros)
 rpmdigest =	$(abs_top_builddir)/tools/rpmdigest
 rpmrepo =	$(abs_top_builddir)/tools/rpmrepo
 rpmsql =	$(abs_top_builddir)/tools/sqlite3
